# smartgrep

./: .gitignore  .gitlab-ci.yml  AGENTS_README.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SKILL.md  install.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: initializr-benchmark.md  self-benchmark.md
docs/: FUTURE_INDEX_FORMAT.md  _config.yml  index.md
docs/architecture/: 01-overview.md  02-ir.md  03-parsers.md  04-index.md  05-query-dsl.md  06-daemon.md  07-adding-a-language.md
scripts/: setup-skill.sh
src/: cli.rs  lib.rs  main.rs
src/commands/: context.rs  deps.rs  index_cmd.rs  install_skill.rs  log_cmd.rs  ls.rs  map.rs  mod.rs  query.rs  refs.rs  show.rs  update.rs
src/daemon/: client.rs  logger.rs  mod.rs  protocol.rs  server.rs
src/format/: json.rs  mod.rs  path_alias.rs  text.rs
src/index/: auto.rs  builder.rs  mod.rs  store.rs  types.rs
src/ir/: types.rs
src/parser/: common.rs  go.rs  java.rs  mod.rs  rust.rs  typescript.rs
src/query/: ast.rs  engine.rs  parser.rs
tests/: commands_test.rs  deps_test.rs  index_test.rs  parser_go_test.rs  parser_java_test.rs  parser_rust_test.rs  parser_typescript_test.rs  query_test.rs  refs_test.rs
tests/fixtures/: Sample.go  Sample.java  Sample.ts  sample.rs
tests/regression/: run.sh
tests/regression/go_project/: errors.go  go.mod  model.go  service.go
tests/regression/rust_project/: Cargo.toml
tests/regression/rust_project/src/: errors.rs  lib.rs  models.rs  service.rs
tests/regression/ts_project/src/: models.ts  utils.ts
(+7 files in other folders)
